--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -68,11 +68,6 @@ nav .nav-link {
   white-space: nowrap;
 }
 
-.navbar-nav .form-search img {
-  width: 20px;
-  height: 20px;
-}
-
 .navbar-nav .form-search input {
   width: 313px;
   height: 48px;
@@ -102,14 +97,43 @@ nav .nav-link {
 }
 
 .container-movie-search {
-  position: fixed;
-  z-index: 1;
-  top: 88px;
-  right: 411px;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   background-color: #fff;
   border: 0;
+}
+
+.container-movie-search-mobile {
+  background-color: transparent;
+  border: 0;
+}
+
+.container-movie-search-mobile h2 {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 24px;
+  letter-spacing: 0.75px;
+  color: #8692a6;
+  text-align: left;
+}
+
+.container-movie-search-mobile h1 {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 24px;
+  letter-spacing: 0.75px;
+  color: #8692a6;
+  text-align: left;
+}
+
+.container-movie-search-mobile p {
+  margin-top: -15px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 32px;
+  letter-spacing: 0.75px;
+  color: #121212;
+  text-align: left;
 }
 
 .result-search {
@@ -126,6 +150,7 @@ nav .nav-link {
   line-height: 24px;
   letter-spacing: 0.75px;
   color: #8692a6;
+  text-align: left;
 }
 
 .container-movie-search h1 {
@@ -134,6 +159,7 @@ nav .nav-link {
   line-height: 24px;
   letter-spacing: 0.75px;
   color: #8692a6;
+  text-align: left;
 }
 
 .container-movie-search p {
@@ -143,6 +169,7 @@ nav .nav-link {
   line-height: 32px;
   letter-spacing: 0.75px;
   color: #121212;
+  text-align: left;
 }
 
 .result-search img {
@@ -150,10 +177,7 @@ nav .nav-link {
 }
 
 .search input {
-  position: absolute;
-  z-index: 1;
-  top: 20px;
-  left: 675px;
+  width: 400px !important;
   height: 48px;
   border-radius: 4px;
   padding-left: 50px;
@@ -170,6 +194,19 @@ nav .nav-link {
   background-size: 20px;
   background-position-x: 16px;
   background-position-y: center;
+}
+
+.btn-close {
+  border: 1px solid transparent;
+  background-color: #5f2eea;
+  color: #f7f7fc;
+  box-sizing: border-box;
+  transition: 0.5s ease;
+}
+
+.btn-close:hover {
+  background-color: #5f2eea;
+  color: #f7f7fc;
 }
 
 .search input::-webkit-input-placeholder {
