--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -139,7 +139,6 @@ main aside.forgot-password form label {
 main aside.forgot-password form input.form-control {
   font-family: "Mulish", sans-serif;
   margin-top: 12px;
-  margin-bottom: 48px;
   background-color: #fcfdfe;
   border: 1px solid #dedede;
   border-radius: 16px;
@@ -155,6 +154,14 @@ main aside.forgot-password form input.form-control {
   transition: 0.5s ease;
 }
 
+main aside.forgot-password form input.form-control.error {
+  border: 1px solid #ea2e57;
+}
+
+main aside.forgot-password form small.error {
+  color: #ea2e57;
+}
+
 main aside.forgot-password form input:focus {
   border: 1px solid transparent;
 }
@@ -166,11 +173,22 @@ main aside.forgot-password form input::-webkit-input-placeholder {
 }
 
 main aside.forgot-password form input[type="password"] {
-  background-image: url(../img/eye.png);
   background-repeat: no-repeat;
   background-size: 20px;
   background-position-x: 94%;
   background-position-y: center;
+}
+
+main aside.forgot-password form div.password-container {
+  position: relative;
+}
+
+main aside.forgot-password form .img-eye {
+  position: absolute;
+  display: block;
+  bottom: 20px;
+  right: 25px;
+  cursor: pointer;
 }
 
 .btn-activate {
@@ -193,10 +211,6 @@ main aside.forgot-password form input[type="password"] {
   background-color: #f7f7fc;
   color: #5f2eea;
   border: 1px solid #5f2eea;
-}
-
-.btn-activate:active {
-  border: 1px solid transparent;
 }
 
 main aside.forgot-password p.forgot-password {
@@ -229,6 +243,14 @@ main aside.forgot-password p.forgot-password {
   main aside.forgot-password h1 {
     font-family: "Mulish", sans-serif;
     font-size: 26px;
+  }
+
+  .btn-activate:hover {
+    cursor: pointer;
+    background-color: #5f2eea;
+    color: #f7f7fc;
+    border: 1px solid transparent;
+    opacity: 0.7;
   }
 }
 
