--- a/src/assets/css/movie-detail.css
+++ b/src/assets/css/movie-detail.css
@@ -300,6 +300,53 @@ span.add-cart:hover {
   box-shadow: inherit;
 }
 
+.cinema h4.empty {
+  font-size: 24px;
+  font-weight: 700;
+  color: #14142b;
+}
+
+.cinema ul.pagination-custom li button {
+  width: 45px;
+  height: 45px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  border: 0.5px solid #dedede;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: 0.75px;
+  color: #4e4b66;
+  text-decoration: none;
+  transition: 0.5s ease;
+}
+
+.cinema ul.pagination-custom li button:hover {
+  background-color: #5f2eea;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border: 0.5px solid transparent;
+  color: #fff;
+}
+
+.cinema ul.pagination-custom li button.page-active {
+  background-color: #5f2eea;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border: 0.5px solid transparent;
+  color: #fff;
+}
+
+.cinema ul.pagination-custom li button.page-active:hover {
+  background-color: #ffffff;
+  border: 0.5px solid #dedede;
+  color: #4e4b66;
+  box-shadow: inherit;
+}
+
 @media screen and (min-width: 1200px) {
   .movie {
     transform: translateX(-74px);
@@ -322,6 +369,29 @@ span.add-cart:hover {
   .movie-detail div:last-of-type {
     order: 4;
   }
+
+  button.book-now:hover {
+    background-color: #5f2eea;
+    color: #f7f7fc;
+    border: 1px solid transparent;
+    opacity: 0.7;
+  }
+
+  .cinema ul.pagination-custom li button:hover {
+    background-color: #ffffff;
+    box-shadow: inherit;
+    border: 0.5px solid #dedede;
+    color: #4e4b66;
+    opacity: 0.6;
+  }
+
+  .cinema ul.pagination-custom li button.page-active:hover {
+    background-color: #5f2eea;
+    border: 0.5px solid transparent;
+    color: #ffffff;
+    box-shadow: inherit;
+    opacity: 0.7;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -339,6 +409,10 @@ span.add-cart:hover {
     line-height: 26px;
     letter-spacing: 0.75px;
     margin-top: 15px;
+  }
+
+  .cinema h4.empty {
+    font-size: 18px;
   }
 }
 
