--- a/src/assets/css/payment-page.css
+++ b/src/assets/css/payment-page.css
@@ -311,6 +311,20 @@ nav.total-payment p {
     right: 0;
     margin-top: 40px;
   }
+
+  .payment-detail .btn-previous:hover {
+    border: 2px solid #5f2eea;
+    background-color: #f7f7fc;
+    color: #5f2eea;
+    opacity: 0.6;
+  }
+
+  .payment-detail .btn-order:hover {
+    border: 2px solid transparent;
+    background-color: #5f2eea;
+    color: #f7f7fc;
+    opacity: 0.7;
+  }
 }
 
 @media screen and (max-width: 767px) {
