fix styling on auth, and profile

--- a/src/assets/css/forgot-password.css
+++ b/src/assets/css/forgot-password.css
@@ -94,6 +94,19 @@ main section.forgot-password span.four.main {
   color: rgba(41, 3, 65, 0.5);
 }
 
+main section.forgot-password span.one::after,
+main section.forgot-password span.two::after,
+main section.forgot-password span.three::after {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: 99999;
+  border: 2px solid #ffffff;
+  width: 50px;
+  transform: rotate(90deg);
+  top: 73px;
+}
+
 main aside.forgot-password img {
   display: none;
 }
