--- a/src/assets/css/profile-page.css
+++ b/src/assets/css/profile-page.css
@@ -76,7 +76,8 @@ nav.details-order a:hover {
   filter: drop-shadow(0px 8px 16px rgba(73, 83, 99, 0.24));
 }
 
-.profile .info .img-container {
+.profile .info .img-container,
+.profile .info .img-container .image {
   position: relative;
 }
 
@@ -84,12 +85,37 @@ nav.details-order a:hover {
   cursor: pointer;
 }
 
+.profile .info .img-container .shadow {
+  position: absolute;
+  font-family: "Mulish";
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: 0.75px;
+  color: #ffffff;
+  background-color: #5f2eea;
+  width: 136px;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.profile .info .file-input:hover + .shadow {
+  opacity: 0.6;
+}
+
 .profile .info .file-input {
   position: absolute;
   width: 136px;
   height: 100%;
+  border-radius: 50%;
   opacity: 0;
   cursor: pointer;
+  z-index: 9999;
 }
 
 .profile h2 {
