--- a/src/assets/css/admin-page.css
+++ b/src/assets/css/admin-page.css
@@ -33,12 +33,39 @@ section.description-premiere .movie-description .card.image img {
   cursor: pointer;
 }
 
+section.description-premiere .movie-description .card.image .shadow {
+  position: absolute;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: 0.75px;
+  color: #ffffff;
+  background-color: #5f2eea;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+section.description-premiere
+  .movie-description
+  .card.image
+  .file-input:hover
+  + .shadow {
+  opacity: 0.6;
+}
+
 section.description-premiere .movie-description .card.image .file-input {
   width: 177px;
   height: 275px;
   opacity: 0;
   position: absolute;
   cursor: pointer;
+  z-index: 999;
 }
 
 section.description-premiere .movie-description .btn-add,
